Ajout d'un pointeur pour le bouton utilisateur en haut à droite sur la version desktop et correction de l'alignement des boutons admin et ajouter sur la liste des celliers

--- a/cellier-projet/client/src/ListeCelliers.scss
+++ b/cellier-projet/client/src/ListeCelliers.scss
@@ -11,6 +11,17 @@
   display: flex;
   justify-content: space-between;
 
+  .entete--items {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  .entete--items > * + * {
+    margin-top: 10px;
+  }
+
   button {
     border: none;
     background-color: transparent;
