--- a/cellier-projet/client/src/NavDesktop.scss
+++ b/cellier-projet/client/src/NavDesktop.scss
@@ -1,55 +1,56 @@
 .NavDesktop {
-	display: none;
+  display: none;
 
-	.MuiList-root {
-		display: none;
-	}
+  .MuiList-root {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 768px) {
-	.NavDesktop {
-		background-color: #f3f5eb;
-		display: flex;
-		justify-content: space-between;
-		padding: 25px 5rem 25px 5rem;
-		box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
-		
-		.logo,
-		.iconeAddBottle{
-			height: 50px;
-			width: 120px;
-		}
+  .NavDesktop {
+    background-color: #f3f5eb;
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 5rem 25px 5rem;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
 
-		.iconeAddBottle {
-		 &:hover {
-			scale: 1.05;
-		 }
-		}
+    .logo,
+    .iconeAddBottle {
+      height: 50px;
+      width: 120px;
+    }
 
-		.actionMenu {
-display: flex;
-		}
+    .iconeAddBottle {
+      &:hover {
+        scale: 1.05;
+      }
+    }
 
-		.navDesktop--container-profil {
-			display: flex;
-			
-			p {
-				padding-top: 10px;
-			}
-			
-			img {
-				margin-right: 15px;
-			}
-		}
-	}
+    .actionMenu {
+      display: flex;
+    }
 
-	.MuiList-root {
-		a span {
-			margin: 0 auto;
-		}
-		a:hover {
-			color: #cc4240;
-			background-color: transparent;
-		}
-	}
+    .navDesktop--container-profil {
+      display: flex;
+      cursor: pointer;
+
+      p {
+        padding-top: 10px;
+      }
+
+      img {
+        margin-right: 15px;
+      }
+    }
+  }
+
+  .MuiList-root {
+    a span {
+      margin: 0 auto;
+    }
+    a:hover {
+      color: #cc4240;
+      background-color: transparent;
+    }
+  }
 }
